--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -4,6 +4,28 @@ properties:
     jdbc-api: 192.168.1.154:8010
     api-gateway: 192.168.1.154:8090
 
+#spring:
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#      connection.provider_class: org.hibernate.hikaricp.internal.HikariCPConnectionProvider
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL5Dialect
+#        current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
+#        format_sql: true
+
+hibernate:
+  dialect: org.hibernate.dialect.MySQL5Dialect
+  format_sql: true
+  cache:
+    region:
+      factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
+    use_second_level_cache: true
+    use_query_cache: true
+    use_minimal_puts: true
+
 security:
   basic:
     enabled: false
