--- a/oauth-server/src/main/resources/bootstrap.yml
+++ b/oauth-server/src/main/resources/bootstrap.yml
@@ -4,8 +4,8 @@ spring:
   cloud:
     config:
       profile: dev
-      uri: http://192.168.1.154:8000
-      label: develop
+      uri: http://127.0.0.1:8000
+#      label: develop
 
 server:
   port: 8002
