--- a/config-repo/oauth-server-pro.yml
+++ b/config-repo/oauth-server-pro.yml
@@ -32,5 +32,5 @@ spring:
       poolName: SpringBootJPAHikariCP
       maxLifetime: 2000000
       connectionTimeout: 30000
-      autoCommit: false
+      autoCommit: true
       connectionTestQuery: SELECT 1
