Modify local config file path
Using relative path

--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
     config:
       server:
         native:
-          searchLocations: file://${user.home}/git/Micro-Service-Lab/config-repo
+          searchLocations: ../config-repo
 
 # Using Git to load config file
 #spring:
