--- a/config-repo/tcc-order-server-pro.yml
+++ b/config-repo/tcc-order-server-pro.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     primary:
       type: com.zaxxer.hikari.HikariDataSource
-      jdbc-url: jdbc:mysql://192.168.1.154:3306/product?characterEncoding=UTF-8
+      jdbc-url: jdbc:mysql://192.168.1.154:3306/orders?characterEncoding=UTF-8
       username: dev
       password: 1qaz@WSX
       driver-class-name: com.mysql.cj.jdbc.Driver
