--- a/config-repo/oauth-redis-server-dev.yml
+++ b/config-repo/oauth-redis-server-dev.yml
@@ -14,7 +14,7 @@ spring:
 #    driver-class-name: com.mysql.jdbc.Driver
     primary:
       type: com.zaxxer.hikari.HikariDataSource
-      jdbc-url: jdbc:mysql://192.168.1.154:3306/dev_oauth?characterEncoding=UTF-8
+      jdbc-url: jdbc:mysql://192.168.1.151:3306/dev?characterEncoding=UTF-8
       username: dev
       password: 1qaz@WSX
       driver-class-name: com.mysql.cj.jdbc.Driver
