Add mutiple datasource logic

--- a/config-repo/api-server-pro.yml
+++ b/config-repo/api-server-pro.yml
@@ -15,3 +15,31 @@ security:
       client-secret: secret
       access-token-uri: http://${properties.server.oauth}/oauth/token
       user-authorization-uri: http://${properties.server.oauth}/oauth/authorize
+
+spring:
+  mvc:
+    throw-exception-if-no-handler-found: true
+  datasource:
+    primary:
+      type: com.zaxxer.hikari.HikariDataSource
+      jdbc-url: jdbc:mysql://192.168.1.154:3306/dev_oauth?characterEncoding=UTF-8
+      username: dev
+      password: 1qaz@WSX
+      driver-class-name: com.mysql.cj.jdbc.Driver
+
+    secondary:
+      type: com.zaxxer.hikari.HikariDataSource
+      jdbc-url: jdbc:mysql://192.168.1.151:3306/dev_data?characterEncoding=UTF-8
+      username: dev
+      password: 1qaz@WSX
+      driver-class-name: com.mysql.jdbc.Driver
+
+    hikari:
+      minimumIdle: 5
+      maximumPoolSize: 20
+      idleTimeout: 30000
+      poolName: SpringBootJPAHikariCP
+      maxLifetime: 2000000
+      connectionTimeout: 30000
+      autoCommit: true
+      connectionTestQuery: SELECT 1
