--- a/config-repo/api-server-dev.yml
+++ b/config-repo/api-server-dev.yml
@@ -22,7 +22,21 @@ spring:
   datasource:
     primary:
       type: com.zaxxer.hikari.HikariDataSource
-      jdbc-url: jdbc:mysql://192.168.1.154:3306/dev_oauth?characterEncoding=UTF-8
+      jdbc-url: jdbc:mysql://192.168.1.151:3306/dev?characterEncoding=UTF-8
+      username: dev
+      password: 1qaz@WSX
+      driver-class-name: com.mysql.cj.jdbc.Driver
+
+    system:
+      type: com.zaxxer.hikari.HikariDataSource
+      jdbc-url: jdbc:mysql://192.168.1.151:3306/dev?characterEncoding=UTF-8
+      username: dev
+      password: 1qaz@WSX
+      driver-class-name: com.mysql.cj.jdbc.Driver
+
+    product:
+      type: com.zaxxer.hikari.HikariDataSource
+      jdbc-url: jdbc:mysql://192.168.1.151:3306/db1?characterEncoding=UTF-8
       username: dev
       password: 1qaz@WSX
       driver-class-name: com.mysql.cj.jdbc.Driver
