--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -18,7 +18,8 @@ properties:
 
 hibernate:
   dialect: org.hibernate.dialect.MySQL5Dialect
-  format_sql: true
+  show_sql: false
+  format_sql: false
   cache:
     region:
       factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
