--- a/config-repo/product-api-server-pro.yml
+++ b/config-repo/product-api-server-pro.yml
@@ -37,17 +37,17 @@ spring:
 
     primary:
       type: com.zaxxer.hikari.HikariDataSource
-      jdbc-url: jdbc:mysql://192.168.1.151:3306/db3?characterEncoding=UTF-8
+      jdbc-url: jdbc:log4jdbc:mysql://192.168.1.151:3306/db3?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
       username: dev
       password: 1qaz@WSX
-      driver-class-name: com.mysql.cj.jdbc.Driver
+      driver-class-name: net.sf.log4jdbc.DriverSpy
 
     secondary:
       type: com.zaxxer.hikari.HikariDataSource
-      jdbc-url: jdbc:mysql://192.168.1.151:3306/db4?characterEncoding=UTF-8
+      jdbc-url: jdbc:log4jdbc:mysql://192.168.1.151:3306/db4?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
       username: dev
       password: 1qaz@WSX
-      driver-class-name: com.mysql.cj.jdbc.Driver
+      driver-class-name: net.sf.log4jdbc.DriverSpy
 
     hikari:
       minimumIdle: 5
