--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -31,19 +31,19 @@ security:
   basic:
     enabled: false
 
-#eureka:
-#  instance:
-#    hostname: 192.168.1.154
-#    port: 8001
-#    register-with-eureka: true # Auto register Eureka server, default is true.
-#    preferIpAddress: true
-#    leaseRenewalIntervalInSeconds: 1
-#    leaseExpirationDurationInSeconds: 2
-#  client:
-#    healthcheck:
-#      enabled: true
-#    service-url:
-#      defaultZone: http://admin:admin@${eureka.instance.hostname}:${eureka.instance.port}/eureka
+eureka:
+  instance:
+    hostname: 192.168.1.154
+    port: 8001
+    register-with-eureka: true # Auto register Eureka server, default is true.
+    preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
+  client:
+    healthcheck:
+      enabled: true
+    service-url:
+      defaultZone: http://admin:admin@${eureka.instance.hostname}:${eureka.instance.port}/eureka
 
 logging:
   file: /tmp/logs/${properties.project}-${properties.env}.log
