Add graphql and datasource

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,7 @@
 
 *.kotlin_module
 
-.gradle/buildOutputCleanup/
-
-.gradle/5.2.1/
-
-.gradle/vcs-1/
+.gradle/*
 
 .idea/
 
@@ -21,3 +17,4 @@
 
 */out/
 
+*/.gradle/
