--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -1,27 +1,28 @@
-spring:
-  application:
-    name: config-server
-  profiles:
-    active: native
-  cloud:
-    config:
-      server:
-        native:
-          searchLocations: ../config-repo
-
-# Using Git to load config file
 #spring:
 #  application:
 #    name: config-server
+#  profiles:
+#    active: native
 #  cloud:
 #    config:
 #      server:
-#        git:
-#          uri: ${config.repo.uri:https://github.com/a09090443/Micro-Service-Lab}
-#          defaultLabel: develop
-#          searchPaths: config-repo
-##         username:
-##         password:
+#        native:
+#          searchLocations: ../config-repo
+
+# Using Git to load config file
+spring:
+  application:
+    name: config-server
+  cloud:
+    config:
+      server:
+        git:
+          uri: ${config.repo.uri:https://github.com/a09090443/Micro-Service-Lab}
+          defaultLabel: develop
+          searchPaths: config-repo
+#         username:
+#         password:
+
 server:
   port: 8000
 
