--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -1,27 +1,27 @@
-#spring:
-#  application:
-#    name: config-server
-#  profiles:
-#    active: native
-#  cloud:
-#    config:
-#      server:
-#        native:
-#          searchLocations: ../config-repo
-
-# Using Git to load config file
 spring:
   application:
     name: config-server
+  profiles:
+    active: native
   cloud:
     config:
       server:
-        git:
-          uri: ${config.repo.uri:https://github.com/a09090443/Micro-Service-Lab}
-          defaultLabel: develop
-          searchPaths: config-repo
-#         username:
-#         password:
+        native:
+          searchLocations: ../config-repo
+
+## Using Git to load config file
+#spring:
+#  application:
+#    name: config-server
+#  cloud:
+#    config:
+#      server:
+#        git:
+#          uri: ${config.repo.uri:https://github.com/a09090443/Micro-Service-Lab}
+#          defaultLabel: develop
+#          searchPaths: config-repo
+##         username:
+##         password:
 
 server:
   port: 8000
@@ -29,7 +29,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://admin:admin@192.168.1.154:8001/eureka
+      defaultZone: http://admin:admin@192.168.1.151:8001/eureka
 
 management:
   endpoints:
