--- a/core/src/main/resources/bootstrap.yml
+++ b/core/src/main/resources/bootstrap.yml
@@ -3,6 +3,10 @@ spring:
     allow-bean-definition-overriding: true
   application:
     name: core
+  cloud:
+    config:
+      profile: dev
+      uri: http://127.0.0.1:8000
 
 server:
   port: 8080
